[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://images/mc.png" type="Texture" id=2]
[ext_resource path="res://images/icon.png" type="Texture" id=3]
[ext_resource path="res://images/mellowplatformerparalax.png" type="Texture" id=4]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160.292, 90.9824 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 320.0
margin_bottom = 183.0
custom_constants/separation = 16

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 15.0
size_flags_stretch_ratio = 0.0
custom_colors/default_color = Color( 1, 0.176471, 0.0431373, 1 )
bbcode_enabled = true
bbcode_text = "[center] Calculus Chronicles [/center]"
text = " Calculus Chronicles "
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 128.0
margin_top = 31.0
margin_right = 192.0
margin_bottom = 163.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
